// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox render with centered text 1`] = `
<div
  className="mfui-beta-text-box mfui-beta-text-box_text-center"
>
  <div
    className="mfui-beta-text-box__content"
  >
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`TextBox render with className="test-class-name" 1`] = `
<div
  className="mfui-beta-text-box test-class-name"
>
  <div
    className="mfui-beta-text-box__content"
  >
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`TextBox render with default props 1`] = `
<div
  className="mfui-beta-text-box"
>
  <div
    className="mfui-beta-text-box__content"
  >
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`TextBox render with limited width 1`] = `
<div
  className="mfui-beta-text-box"
>
  <Grid
    hAlign="left"
  >
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-beta-text-box__content"
      >
        <p>
          test
        </p>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`TextBox render with limited width and centered component 1`] = `
<div
  className="mfui-beta-text-box"
>
  <Grid
    hAlign="center"
  >
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-beta-text-box__content"
      >
        <p>
          test
        </p>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`TextBox render with limited width and centered text 1`] = `
<div
  className="mfui-beta-text-box mfui-beta-text-box_text-center"
>
  <Grid
    hAlign="left"
  >
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-beta-text-box__content"
      >
        <p>
          test
        </p>
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`TextBox render with limited width, centered component and centered text 1`] = `
<div
  className="mfui-beta-text-box mfui-beta-text-box_text-center"
>
  <Grid
    hAlign="center"
  >
    <GridColumn
      desktop="10"
      mobile="12"
      tablet="12"
      wide="8"
    >
      <div
        className="mfui-beta-text-box__content"
      >
        <p>
          test
        </p>
      </div>
    </GridColumn>
  </Grid>
</div>
`;
